# particle-life

./: Cargo.toml
src/: main.rs
src/particle/: constants.rs  math.rs  mod.rs  particle.rs
